
syntax = "proto3";

package user;

option go_package = "./user";

message GetUserInfoRequest{
  int64 uid = 1;

}
message GetUserInfoResponse{
  int64 code = 1;
  string msg = 2;
  User detail = 3;
  repeated User list = 4;

}
message User{
  int64 uid = 1;
  string name = 2;

}

service UserService{
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}
